--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "example",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "example package",
   "main": "src/main.js",
   "scripts": {
@@ -13,10 +13,18 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compress": "~0.5.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-csslint": "~0.1.2",
+    "grunt-contrib-cssmin": "~0.6.2",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-contrib-jasmine": "~0.5.2",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-qunit": "~0.3.0",
+    "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "jsdoc": "~3.3.0",
