--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "warthog",
   "version": "0.1.0",
   "description": "A full stack application template for Node, Grunt, Bower, RequireJS and AngularJS usage.",
+  "license": "MIT",
   "main": "system/src/main",
   "scripts": {
     "test": "grunt test",
@@ -10,6 +11,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/gurumojo/warthog.git"
+  },
+  "dependencies": {
+    "requirejs": "^2.1.11",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
