--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-karma": "^0.8.3",
     "grunt-replace": "~0.5.1",
     "grunt-template-jasmine-requirejs": "~0.1.8",
     "jasmine-node": "^1.14.3",
     "jsdoc": "~3.3.0",
+    "karma": "^0.12.16",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "protractor": "^0.23.1",
     "semver": "~2.2.1",
     "stripcolorcodes": "~0.1.0"
   }
