--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "warthog",
-  "version": "0.1.3",
-  "description": "A full stack application template for Node, Grunt, Bower, RequireJS and AngularJS usage.",
+  "version": "0.1.4",
+  "description": "A full stack application template using Node, Grunt, Bower, RequireJS and AngularJS.",
   "license": "MIT",
   "main": "system/src/main",
   "scripts": {
@@ -36,6 +36,7 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-karma": "^0.8.3",
+    "grunt-protractor-runner": "^1.0.0",
     "grunt-replace": "~0.5.1",
     "grunt-template-jasmine-requirejs": "~0.1.8",
     "jasmine-node": "^1.14.3",
