Fixes for Documentation
 * JSDoc
   * correct links between output files
   * limit compilation to folders under system/src/lib
 * README.md
   * added links to dependency documentation
   * tweaks to reflect current system build

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "postinstall": "system/bin/postinstall.sh",
     "postupdate": "system/bin/postinstall.sh",
-    "test": "system/bin/test.sh"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
